--- a/pod-memory-hog.yaml
+++ b/pod-memory-hog.yaml
@@ -1,7 +1,7 @@
 apiVersion: litmuschaos.io/v1alpha1
 kind: ChaosEngine
 metadata:
-  name: pod-memory-hog
+  name: pgdemo-memory-hog
   namespace: "pgdemo"
 spec:
   annotationCheck: "false"
