--- a/experiments.yaml
+++ b/experiments.yaml
@@ -249,7 +249,7 @@ spec:
           - "patch"
           - "update"
     image: "litmuschaos/go-runner:1.12.0"
-    imagePullPolicy: IfNotPresent
+    imagePullPolicy: Always
     args:
     - -c
     - ./experiments -name node-taint
@@ -332,7 +332,7 @@ spec:
           - "delete"
           - "deletecollection"
     image: "litmuschaos/go-runner:1.12.0"
-    imagePullPolicy: IfNotPresent
+    imagePullPolicy: Always
     args:
     - -c
     - ./experiments -name pod-cpu-hog
@@ -433,7 +433,7 @@ spec:
           - "get"
           - "list"
     image: "litmuschaos/go-runner:1.12.0"
-    imagePullPolicy: IfNotPresent
+    imagePullPolicy: Always
     args:
     - -c
     - ./experiments -name node-restart
@@ -522,7 +522,7 @@ spec:
           - "get"
           - "list"
     image: "litmuschaos/go-runner:1.12.0"
-    imagePullPolicy: IfNotPresent
+    imagePullPolicy: Always
     args:
     - -c
     - ./experiments -name node-cpu-hog
@@ -619,7 +619,7 @@ spec:
           - "get"
           - "deletecollection"
     image: "litmuschaos/go-runner:1.12.0"
-    imagePullPolicy: IfNotPresent
+    imagePullPolicy: Always
     args:
     - -c
     - ./experiments -name pod-network-corruption
@@ -743,7 +743,7 @@ spec:
           - "delete"
           - "deletecollection"
     image: "litmuschaos/go-runner:1.12.0"
-    imagePullPolicy: IfNotPresent
+    imagePullPolicy: Always
     args:
     - -c
     - ./experiments -name pod-delete
@@ -945,7 +945,7 @@ spec:
           - "get"
           - "list"
     image: "litmuschaos/go-runner:1.12.0"
-    imagePullPolicy: IfNotPresent
+    imagePullPolicy: Always
     args:
     - -c
     - ./experiments -name node-io-stress
@@ -1048,7 +1048,7 @@ spec:
           - "get"
           - "list"
     image: "litmuschaos/go-runner:1.12.0"
-    imagePullPolicy: IfNotPresent
+    imagePullPolicy: Always
     args:
     - -c
     - ./experiments -name node-memory-hog
@@ -1227,7 +1227,7 @@ spec:
           - "get"
           - "list"
     image: "litmuschaos/go-runner:1.12.0"
-    imagePullPolicy: IfNotPresent
+    imagePullPolicy: Always
     args:
     - -c
     - ./experiments -name kubelet-service-kill
@@ -1310,7 +1310,7 @@ spec:
           - "list"
           - "patch"
     image: "litmuschaos/go-runner:1.12.0"
-    imagePullPolicy: IfNotPresent
+    imagePullPolicy: Always
     args:
     - -c
     - ./experiments -name node-drain
@@ -1387,7 +1387,7 @@ spec:
           - "get"
           - "list"
     image: "litmuschaos/go-runner:1.12.0"
-    imagePullPolicy: IfNotPresent
+    imagePullPolicy: Always
     args:
     - -c
     - ./experiments -name node-restart
@@ -1485,7 +1485,7 @@ spec:
           - "delete"
           - "deletecollection"
     image: "litmuschaos/go-runner:1.12.0"
-    imagePullPolicy: IfNotPresent
+    imagePullPolicy: Always
     args:
     - -c
     - ./experiments -name disk-fill
@@ -1575,7 +1575,7 @@ spec:
           - "update"
           - "delete"
     image: "litmuschaos/ansible-runner:1.12.0"
-    imagePullPolicy: IfNotPresent
+    imagePullPolicy: Always
     args:
     - -c
     - ansible-playbook ./experiments/generic/disk_loss/disk_loss_ansible_logic.yml -i /etc/ansible/hosts -vv; exit 0
@@ -1678,7 +1678,6 @@ spec:
           - "delete"
           - "deletecollection"
     image: "litmuschaos/go-runner:1.12.0"
-    imagePullPolicy: IfNotPresent
     args:
     - -c
     - ./experiments -name pod-memory-hog
@@ -1776,7 +1775,7 @@ spec:
           - "get"
           - "list"
     image: "litmuschaos/ansible-runner:1.12.0"
-    imagePullPolicy: IfNotPresent
+    imagePullPolicy: Always
     args:
     - -c
     - ansible-playbook ./experiments/generic/docker_service_kill/docker_service_kill_ansible_logic.yml -i /etc/ansible/hosts -vv; exit 0
@@ -1851,7 +1850,7 @@ spec:
           - "delete"
           - "deletecollection"
     image: "litmuschaos/go-runner:1.12.0"
-    imagePullPolicy: IfNotPresent
+    imagePullPolicy: Always
     args:
     - -c
     - ./experiments -name pod-network-latency
@@ -1973,7 +1972,7 @@ spec:
         - "delete"
         - "deletecollection"
     image: "litmuschaos/go-runner:1.12.0"
-    imagePullPolicy: IfNotPresent
+    imagePullPolicy: Always
     args:
     - -c
     - ./experiments -name pod-network-loss
@@ -2098,7 +2097,7 @@ spec:
           - "patch"
           - "update"
     image: "litmuschaos/go-runner:1.12.0"
-    imagePullPolicy: IfNotPresent
+    imagePullPolicy: Always
     args:
     - -c
     - ./experiments -name pod-autoscaler
@@ -2176,7 +2175,7 @@ spec:
           - "delete"
           - "deletecollection"
     image: "litmuschaos/go-runner:1.12.0"
-    imagePullPolicy: IfNotPresent
+    imagePullPolicy: Always
     args:
     - -c
     - ./experiments -name container-kill
