--- a/exp.yaml
+++ b/exp.yaml
@@ -163,6 +163,7 @@ spec:
       name: k8-service-kill    
       app.kubernetes.io/part-of: litmus
     image: "litmuschaos/chaostoolkit:latest"
+    imagePullPolicy: IfNotPresent
     args:
     - -c
     - python /app/chaos/chaostest/kubernetes/k8_wrapper.py; exit 0
@@ -332,7 +333,7 @@ spec:
           - "delete"
           - "deletecollection"
     image: "litmuschaos/go-runner:1.12.0"
-    imagePullPolicy: Always
+    imagePullPolicy: IfNotPresent
     args:
     - -c
     - ./experiments -name pod-cpu-hog
@@ -1678,6 +1679,7 @@ spec:
           - "delete"
           - "deletecollection"
     image: "litmuschaos/go-runner:1.12.0"
+    imagePullPolicy: IfNotPresent
     args:
     - -c
     - ./experiments -name pod-memory-hog
